--- a/css/donate.css
+++ b/css/donate.css
@@ -1,7 +1,7 @@
 .version.donate /* version checker */
 {
-	color: #0000F5;
-	background-color: #C3EF77;
+	color: #0000EC;
+	background-color: #091F95;
 }
 
 #muse_css_mq
@@ -38,7 +38,7 @@
 
 #u3237-6
 {
-	z-index: 46;
+	z-index: 52;
 	width: 308px;
 	min-height: 83px;
 	margin-left: 270px;
@@ -55,7 +55,7 @@
 
 #u3111
 {
-	width: 168px;
+	width: 139px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
@@ -63,28 +63,28 @@
 
 #u3112
 {
-	width: 168px;
+	width: 139px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3112:hover
 {
-	width: 168px;
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3112:active
 {
-	width: 168px;
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3114-4
 {
-	width: 168px;
+	width: 139px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -96,7 +96,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 168px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -105,43 +105,50 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 168px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3118
 {
-	width: 168px;
+	width: 139px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 170px;
+	left: 141px;
 }
 
 #u3119
 {
-	width: 168px;
+	width: 139px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3112.MuseMenuActive,#u3119:hover
 {
-	width: 168px;
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3119:active
 {
-	width: 168px;
+	width: 139px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3119.MuseMenuActive
+{
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3122-4
 {
-	width: 168px;
+	width: 139px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -153,7 +160,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 168px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -162,55 +169,121 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 168px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
-#u3155
+#u3119.MuseMenuActive #u3122-4
 {
-	width: 168px;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 139px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u4801
+{
+	width: 140px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 340px;
+	left: 282px;
 }
 
-#u3156
+#u4802
 {
-	width: 168px;
+	width: 140px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
-#u3119.MuseMenuActive,#u3156:hover
+#u4802:hover
 {
-	width: 168px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u3156:active
+#u4802:active
 {
-	width: 168px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u3158-4
+#u4804-4
 {
-	width: 168px;
+	width: 140px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
 	top: 8px;
 }
 
-#u3119.MuseMenuActive #u3122-4,#u3156:hover #u3158-4
+#u4802:hover #u4804-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 168px;
+	width: 140px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u4802:active #u4804-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 140px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u3155
+{
+	width: 140px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+	left: 424px;
+}
+
+#u3156
+{
+	width: 140px;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u4802.MuseMenuActive,#u3156:hover
+{
+	width: 140px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3156:active
+{
+	width: 140px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3158-4
+{
+	width: 140px;
+	min-height: 17px;
+	position: relative;
+	margin-right: -10000px;
+	top: 8px;
+}
+
+#u4802.MuseMenuActive #u4804-4,#u3156:hover #u3158-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -219,119 +292,55 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 168px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3197
-{
-	width: 168px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 510px;
-}
-
-#u3198
-{
-	width: 168px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u3156.MuseMenuActive,#u3198:hover
-{
-	width: 168px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3198:active
-{
-	width: 168px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3200-4
-{
-	width: 168px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u3156.MuseMenuActive #u3158-4,#u3198:hover #u3200-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 168px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3198:active #u3200-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 168px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3176
 {
-	width: 168px;
+	width: 140px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 680px;
+	left: 566px;
 }
 
 #u3177
 {
-	width: 168px;
+	width: 140px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
-#u3198.MuseMenuActive,#u3177:hover
+#u3156.MuseMenuActive,#u3177:hover
 {
-	width: 168px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3177:active
 {
-	width: 168px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3177.MuseMenuActive
-{
-	width: 168px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3178-4
 {
-	width: 168px;
+	width: 140px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
 	top: 8px;
 }
 
-#u3198.MuseMenuActive #u3200-4,#u3177:hover #u3178-4
+#u3156.MuseMenuActive #u3158-4,#u3177:hover #u3178-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 168px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -340,16 +349,80 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 168px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
-#u3177.MuseMenuActive #u3178-4
+#u3197
+{
+	width: 140px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+	left: 708px;
+}
+
+#u3198
+{
+	width: 140px;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u3177.MuseMenuActive,#u3198:hover
+{
+	width: 140px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3198:active
+{
+	width: 140px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3198.MuseMenuActive
+{
+	width: 140px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3200-4
+{
+	width: 140px;
+	min-height: 17px;
+	position: relative;
+	margin-right: -10000px;
+	top: 8px;
+}
+
+#u3177.MuseMenuActive #u3178-4,#u3198:hover #u3200-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 168px;
+	width: 140px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u3198:active #u3200-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 140px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u3198.MuseMenuActive #u3200-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -369,7 +442,7 @@
 
 #u1225-27
 {
-	z-index: 59;
+	z-index: 65;
 	width: 782px;
 	min-height: 323px;
 	background-color: transparent;
@@ -399,7 +472,7 @@
 
 #u1235
 {
-	z-index: 86;
+	z-index: 92;
 	width: 118px;
 	min-height: 33px;
 	border-width: 0px;
@@ -433,7 +506,7 @@
 
 #u4273-4
 {
-	z-index: 37;
+	z-index: 43;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 15px;
@@ -442,7 +515,7 @@
 
 #u3222-5
 {
-	z-index: 41;
+	z-index: 47;
 	width: 114px;
 	min-height: 19px;
 	position: relative;
@@ -462,7 +535,7 @@
 
 #u3252-6
 {
-	z-index: 52;
+	z-index: 58;
 	width: 622px;
 	min-height: 19px;
 	position: relative;
@@ -482,7 +555,7 @@
 
 #u4305
 {
-	z-index: 58;
+	z-index: 64;
 	width: 33px;
 	min-height: 33px;
 	position: relative;
