--- a/css/iefonts_resume.css
+++ b/css/iefonts_resume.css
@@ -19,8 +19,13 @@
 }
 
 
-#u1253-39
+#u1253-78
 {
 	font-family: bitter-n4, serif;
+}
+
+#u1253-44 > #u1253-39:before,#u1253-44 > #u1253-41:before,#u1253-44 > #u1253-43:before,#u1253-55 > #u1253-52:before,#u1253-55 > #u1253-54:before,#u1253-65 > #u1253-60:before,#u1253-65 > #u1253-62:before,#u1253-65 > #u1253-64:before,#u1253-71 > #u1253-70:before
+{
+	font-family: bitter-n4, Georgia;
 }
 
