--- a/css/resume.css
+++ b/css/resume.css
@@ -1,7 +1,7 @@
 .version.resume /* version checker */
 {
-	color: #000000;
-	background-color: #6BCEDE;
+	color: #0000FD;
+	background-color: #4BB2D5;
 }
 
 #muse_css_mq
@@ -39,7 +39,7 @@
 
 #u3237-6
 {
-	z-index: 46;
+	z-index: 52;
 	width: 308px;
 	min-height: 83px;
 	margin-left: 270px;
@@ -56,7 +56,7 @@
 
 #u3111
 {
-	width: 168px;
+	width: 139px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
@@ -64,28 +64,28 @@
 
 #u3112
 {
-	width: 168px;
+	width: 139px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3112:hover
 {
-	width: 168px;
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3112:active
 {
-	width: 168px;
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3114-4
 {
-	width: 168px;
+	width: 139px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -97,7 +97,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 168px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -106,43 +106,50 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 168px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3118
 {
-	width: 168px;
+	width: 139px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 170px;
+	left: 141px;
 }
 
 #u3119
 {
-	width: 168px;
+	width: 139px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
 #u3112.MuseMenuActive,#u3119:hover
 {
-	width: 168px;
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3119:active
 {
-	width: 168px;
+	width: 139px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3119.MuseMenuActive
+{
+	width: 139px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3122-4
 {
-	width: 168px;
+	width: 139px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
@@ -154,7 +161,7 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 168px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -163,55 +170,121 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 168px;
+	width: 139px;
 	margin: 0px -10000px 0px 0px;
 }
 
-#u3155
+#u3119.MuseMenuActive #u3122-4
 {
-	width: 168px;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 139px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u4801
+{
+	width: 140px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 340px;
+	left: 282px;
 }
 
-#u3156
+#u4802
 {
-	width: 168px;
+	width: 140px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
-#u3119.MuseMenuActive,#u3156:hover
+#u4802:hover
 {
-	width: 168px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u3156:active
+#u4802:active
 {
-	width: 168px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
-#u3158-4
+#u4804-4
 {
-	width: 168px;
+	width: 140px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
 	top: 8px;
 }
 
-#u3119.MuseMenuActive #u3122-4,#u3156:hover #u3158-4
+#u4802:hover #u4804-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 168px;
+	width: 140px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u4802:active #u4804-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 140px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u3155
+{
+	width: 140px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+	left: 424px;
+}
+
+#u3156
+{
+	width: 140px;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u4802.MuseMenuActive,#u3156:hover
+{
+	width: 140px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3156:active
+{
+	width: 140px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3158-4
+{
+	width: 140px;
+	min-height: 17px;
+	position: relative;
+	margin-right: -10000px;
+	top: 8px;
+}
+
+#u4802.MuseMenuActive #u4804-4,#u3156:hover #u3158-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -220,119 +293,55 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 168px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3197
-{
-	width: 168px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 510px;
-}
-
-#u3198
-{
-	width: 168px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u3156.MuseMenuActive,#u3198:hover
-{
-	width: 168px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3198:active
-{
-	width: 168px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3200-4
-{
-	width: 168px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u3156.MuseMenuActive #u3158-4,#u3198:hover #u3200-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 168px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3198:active #u3200-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 168px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
 #u3176
 {
-	width: 168px;
+	width: 140px;
 	min-height: 34px;
 	position: relative;
 	margin-right: -10000px;
-	left: 680px;
+	left: 566px;
 }
 
 #u3177
 {
-	width: 168px;
+	width: 140px;
 	padding-bottom: 17px;
 	position: relative;
 }
 
-#u3198.MuseMenuActive,#u3177:hover
+#u3156.MuseMenuActive,#u3177:hover
 {
-	width: 168px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3177:active
 {
-	width: 168px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3177.MuseMenuActive
-{
-	width: 168px;
+	width: 140px;
 	min-height: 0px;
 	margin: 0px;
 }
 
 #u3178-4
 {
-	width: 168px;
+	width: 140px;
 	min-height: 17px;
 	position: relative;
 	margin-right: -10000px;
 	top: 8px;
 }
 
-#u3198.MuseMenuActive #u3200-4,#u3177:hover #u3178-4
+#u3156.MuseMenuActive #u3158-4,#u3177:hover #u3178-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 168px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
@@ -341,77 +350,106 @@
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 168px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
-#u3177.MuseMenuActive #u3178-4
+#u3197
+{
+	width: 140px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+	left: 708px;
+}
+
+#u3198
+{
+	width: 140px;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u3177.MuseMenuActive,#u3198:hover
+{
+	width: 140px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3198:active
+{
+	width: 140px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3198.MuseMenuActive
+{
+	width: 140px;
+	min-height: 0px;
+	margin: 0px;
+}
+
+#u3200-4
+{
+	width: 140px;
+	min-height: 17px;
+	position: relative;
+	margin-right: -10000px;
+	top: 8px;
+}
+
+#u3177.MuseMenuActive #u3178-4,#u3198:hover #u3200-4
 {
 	padding-top: 0px;
 	padding-bottom: 0px;
 	min-height: 17px;
-	width: 168px;
+	width: 140px;
 	margin: 0px -10000px 0px 0px;
 }
 
-#pu3099
+#u3198:active #u3200-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 140px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#u3198.MuseMenuActive #u3200-4
+{
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 17px;
+	width: 140px;
+	margin: 0px -10000px 0px 0px;
+}
+
+#ppu1253-78
 {
 	width: 0.01px;
 	margin-left: -50px;
 }
 
-#u3099
+#pu1253-78
 {
-	z-index: 4;
-	width: 111px;
-	min-height: 271px;
-	position: relative;
+	width: 0.01px;
 	margin-right: -10000px;
-	margin-top: 11px;
+	margin-top: 25px;
+	margin-left: 130px;
 }
 
-#u3104
+#u1253-78
 {
-	z-index: 5;
-	width: 17px;
-	height: 515px;
-	position: relative;
-	margin-right: -10000px;
-	left: 50px;
-}
-
-#u4273-4
-{
-	z-index: 37;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 15px;
-	left: 991px;
-}
-
-#u3222-5
-{
-	z-index: 41;
-	width: 114px;
-	min-height: 19px;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 80px;
-	left: 946px;
-}
-
-#u1253-39
-{
-	z-index: 59;
+	z-index: 65;
 	width: 782px;
 	min-height: 539px;
 	background-color: transparent;
 	font-family: bitter, serif;
-	font-weight: 400;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 25px;
-	left: 130px;
 }
 
 #u1253-2
@@ -420,6 +458,7 @@
 	text-align: center;
 	line-height: 30px;
 	color: #FFFFFF;
+	font-weight: 400;
 }
 
 #u1253-4,#u1253-6
@@ -428,6 +467,7 @@
 	text-align: center;
 	line-height: 19px;
 	color: #FFFFFF;
+	font-weight: 400;
 }
 
 #u1253-10
@@ -435,55 +475,167 @@
 	font-size: 25px;
 	line-height: 30px;
 	color: #0093C4;
+	font-weight: 400;
 }
 
 #u1253-11
 {
 	font-size: 14px;
 	color: #534741;
+	font-weight: 400;
 }
 
-#u1253-20
+#u1253-17
+{
+	font-size: 16px;
+	text-align: left;
+	line-height: 19px;
+	padding-left: 70px;
+	color: #FFFFFF;
+	font-weight: 400;
+}
+
+#u1253-15
+{
+	font-weight: 700;
+}
+
+#u1253-19
+{
+	font-size: 16px;
+	text-align: left;
+	line-height: 19px;
+	padding-left: 70px;
+	color: #9E9E9E;
+	font-weight: 700;
+}
+
+#u1253-21
+{
+	text-align: left;
+	padding-left: 100px;
+	padding-top: 3px;
+	color: #9E9E9E;
+	font-weight: 400;
+}
+
+#u1253-27
 {
 	color: #FFFFFF;
 	font-weight: 700;
 }
 
-#u1253-21,#u1253-24
+#u1253-29,#u1253-32
+{
+	font-size: 16px;
+	line-height: 19px;
+	padding-left: 70px;
+	font-weight: 400;
+}
+
+#u1253-16,#u1253-28,#u1253-31
 {
 	color: #9E9E9E;
 }
 
-#u1253-18,#u1253-22,#u1253-25,#u1253-26,#u1253-27
+#u1253-25,#u1253-33,#u1253-34
 {
 	font-size: 16px;
 	line-height: 19px;
+	font-weight: 400;
 }
 
-#u1253-7,#u1253-9,#u1253-13,#u1253-14,#u1253-15,#u1253-17,#u1253-29,#u1253-30,#u1253-32,#u1253-33,#u1253-35,#u1253-36
+#u1253-39,#u1253-41,#u1253-43
+{
+	font-size: 16px;
+	text-align: left;
+	line-height: 19px;
+	padding-left: 45px;
+	color: #FFFFFF;
+	font-weight: 400;
+}
+
+#u1253-44 > #u1253-39:before,#u1253-44 > #u1253-41:before,#u1253-44 > #u1253-43:before
+{
+	font-family: bitter, Georgia;
+	font-weight: 400;
+	margin-right: -39px;
+}
+
+#u1253-44.rtl-list > #u1253-39:before,#u1253-44.rtl-list > #u1253-41:before,#u1253-44.rtl-list > #u1253-43:before
+{
+	margin-right: 0px;
+	margin-left: -39px;
+}
+
+#u1253-14,#u1253-22,#u1253-45
+{
+	font-size: 16px;
+	text-align: left;
+	line-height: 19px;
+	color: #FFFFFF;
+	font-weight: 400;
+}
+
+#u1253-50,#u1253-58,#u1253-68
+{
+	font-size: 16px;
+	text-align: left;
+	line-height: 19px;
+	padding-left: 50px;
+	color: #9E9E9E;
+	font-weight: 400;
+}
+
+#u1253-55 > #u1253-52:before,#u1253-55 > #u1253-54:before,#u1253-65 > #u1253-60:before,#u1253-65 > #u1253-62:before,#u1253-65 > #u1253-64:before,#u1253-71 > #u1253-70:before
+{
+	font-family: bitter, Georgia;
+	font-weight: 400;
+	margin-right: -44px;
+}
+
+#u1253-55.rtl-list > #u1253-52:before,#u1253-55.rtl-list > #u1253-54:before,#u1253-65.rtl-list > #u1253-60:before,#u1253-65.rtl-list > #u1253-62:before,#u1253-65.rtl-list > #u1253-64:before,#u1253-71.rtl-list > #u1253-70:before
+{
+	margin-right: 0px;
+	margin-left: -44px;
+}
+
+#u1253-48,#u1253-52,#u1253-54,#u1253-56,#u1253-60,#u1253-62,#u1253-64,#u1253-66,#u1253-70,#u1253-72
+{
+	font-size: 16px;
+	text-align: left;
+	line-height: 19px;
+	padding-left: 50px;
+	color: #FFFFFF;
+	font-weight: 400;
+}
+
+#u1253-7,#u1253-9,#u1253-13,#u1253-24,#u1253-36,#u1253-37,#u1253-47,#u1253-74,#u1253-75
 {
 	font-size: 25px;
 	text-align: left;
 	line-height: 30px;
 	color: #0093C4;
+	font-weight: 400;
 }
 
-#u1253-37
+#u1253-76
 {
 	font-size: 20px;
 	text-align: left;
 	line-height: 24px;
 	color: #0093C4;
+	font-weight: 400;
 }
 
 #slideshowu4628
 {
-	z-index: 98;
+	z-index: 143;
 	width: 0.01px;
 	height: 284px;
-	margin-left: 96px;
-	margin-top: 148px;
 	position: relative;
+	margin-right: -10000px;
+	margin-top: 876px;
 }
 
 #u4651
@@ -502,12 +654,12 @@
 
 #u4651popup
 {
-	z-index: 99;
+	z-index: 144;
 }
 
 #u4652
 {
-	z-index: 100;
+	z-index: 145;
 	width: 1140px;
 	height: 755px;
 	background-color: transparent;
@@ -535,12 +687,12 @@
 
 #u4631popup
 {
-	z-index: 102;
+	z-index: 147;
 }
 
 #u4638
 {
-	z-index: 103;
+	z-index: 148;
 	width: 177px;
 	height: 251px;
 	border-width: 0px;
@@ -567,8 +719,8 @@
 	min-height: 30px;
 	background-color: transparent;
 	line-height: 20px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	top: 170px;
 	left: -45px;
@@ -576,7 +728,7 @@
 
 #u4650-4popup
 {
-	z-index: 105;
+	z-index: 150;
 }
 
 #u4663-4
@@ -586,8 +738,8 @@
 	min-height: 30px;
 	background-color: transparent;
 	line-height: 20px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	top: 170px;
 	left: 1160px;
@@ -595,7 +747,7 @@
 
 #u4663-4popup
 {
-	z-index: 109;
+	z-index: 154;
 }
 
 #u4642
@@ -628,15 +780,15 @@
 
 #u4643-4
 {
-	z-index: 114;
+	z-index: 159;
 	width: 20px;
 	min-height: 20px;
 	border-width: 0px;
 	border-color: transparent;
 	background-color: transparent;
 	line-height: 20px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 	position: relative;
 	margin-right: -10000px;
@@ -654,6 +806,46 @@
 	background: url("../images/loading.gif") no-repeat center center;
 }
 
+#u3099
+{
+	z-index: 4;
+	width: 111px;
+	min-height: 271px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 11px;
+}
+
+#u3104
+{
+	z-index: 5;
+	width: 17px;
+	height: 515px;
+	position: relative;
+	margin-right: -10000px;
+	left: 50px;
+}
+
+#u4273-4
+{
+	z-index: 43;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 15px;
+	left: 991px;
+}
+
+#u3222-5
+{
+	z-index: 47;
+	width: 114px;
+	min-height: 19px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 80px;
+	left: 946px;
+}
+
 #u3093
 {
 	z-index: 3;
@@ -664,7 +856,7 @@
 
 #u3252-6
 {
-	z-index: 52;
+	z-index: 58;
 	width: 622px;
 	min-height: 19px;
 	position: relative;
@@ -684,7 +876,7 @@
 
 #u4305
 {
-	z-index: 58;
+	z-index: 64;
 	width: 33px;
 	min-height: 33px;
 	position: relative;
