--- a/css/resume.css
+++ b/css/resume.css
@@ -1,7 +1,7 @@
 .version.resume /* version checker */
 {
-	color: #0000FD;
-	background-color: #4BB2D5;
+	color: #0000E6;
+	background-color: #6A8F40;
 }
 
 #muse_css_mq
@@ -427,13 +427,13 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#ppu1253-78
+#ppu1253-86
 {
 	width: 0.01px;
 	margin-left: -50px;
 }
 
-#pu1253-78
+#pu1253-86
 {
 	width: 0.01px;
 	margin-right: -10000px;
@@ -441,7 +441,7 @@
 	margin-left: 130px;
 }
 
-#u1253-78
+#u1253-86
 {
 	z-index: 65;
 	width: 782px;
@@ -545,7 +545,7 @@
 	font-weight: 400;
 }
 
-#u1253-39,#u1253-41,#u1253-43
+#u1253-39,#u1253-41,#u1253-43,#u1253-45,#u1253-47
 {
 	font-size: 16px;
 	text-align: left;
@@ -555,20 +555,20 @@
 	font-weight: 400;
 }
 
-#u1253-44 > #u1253-39:before,#u1253-44 > #u1253-41:before,#u1253-44 > #u1253-43:before
+#u1253-48 > #u1253-39:before,#u1253-48 > #u1253-41:before,#u1253-48 > #u1253-43:before,#u1253-48 > #u1253-45:before,#u1253-48 > #u1253-47:before
 {
 	font-family: bitter, Georgia;
 	font-weight: 400;
 	margin-right: -39px;
 }
 
-#u1253-44.rtl-list > #u1253-39:before,#u1253-44.rtl-list > #u1253-41:before,#u1253-44.rtl-list > #u1253-43:before
+#u1253-48.rtl-list > #u1253-39:before,#u1253-48.rtl-list > #u1253-41:before,#u1253-48.rtl-list > #u1253-43:before,#u1253-48.rtl-list > #u1253-45:before,#u1253-48.rtl-list > #u1253-47:before
 {
 	margin-right: 0px;
 	margin-left: -39px;
 }
 
-#u1253-14,#u1253-22,#u1253-45
+#u1253-14,#u1253-22,#u1253-49
 {
 	font-size: 16px;
 	text-align: left;
@@ -577,7 +577,7 @@
 	font-weight: 400;
 }
 
-#u1253-50,#u1253-58,#u1253-68
+#u1253-54,#u1253-62,#u1253-74
 {
 	font-size: 16px;
 	text-align: left;
@@ -587,20 +587,20 @@
 	font-weight: 400;
 }
 
-#u1253-55 > #u1253-52:before,#u1253-55 > #u1253-54:before,#u1253-65 > #u1253-60:before,#u1253-65 > #u1253-62:before,#u1253-65 > #u1253-64:before,#u1253-71 > #u1253-70:before
+#u1253-59 > #u1253-56:before,#u1253-59 > #u1253-58:before,#u1253-71 > #u1253-64:before,#u1253-71 > #u1253-66:before,#u1253-71 > #u1253-68:before,#u1253-71 > #u1253-70:before,#u1253-79 > #u1253-76:before,#u1253-79 > #u1253-78:before
 {
 	font-family: bitter, Georgia;
 	font-weight: 400;
 	margin-right: -44px;
 }
 
-#u1253-55.rtl-list > #u1253-52:before,#u1253-55.rtl-list > #u1253-54:before,#u1253-65.rtl-list > #u1253-60:before,#u1253-65.rtl-list > #u1253-62:before,#u1253-65.rtl-list > #u1253-64:before,#u1253-71.rtl-list > #u1253-70:before
+#u1253-59.rtl-list > #u1253-56:before,#u1253-59.rtl-list > #u1253-58:before,#u1253-71.rtl-list > #u1253-64:before,#u1253-71.rtl-list > #u1253-66:before,#u1253-71.rtl-list > #u1253-68:before,#u1253-71.rtl-list > #u1253-70:before,#u1253-79.rtl-list > #u1253-76:before,#u1253-79.rtl-list > #u1253-78:before
 {
 	margin-right: 0px;
 	margin-left: -44px;
 }
 
-#u1253-48,#u1253-52,#u1253-54,#u1253-56,#u1253-60,#u1253-62,#u1253-64,#u1253-66,#u1253-70,#u1253-72
+#u1253-52,#u1253-56,#u1253-58,#u1253-60,#u1253-64,#u1253-66,#u1253-68,#u1253-70,#u1253-72,#u1253-76,#u1253-78,#u1253-80
 {
 	font-size: 16px;
 	text-align: left;
@@ -610,7 +610,7 @@
 	font-weight: 400;
 }
 
-#u1253-7,#u1253-9,#u1253-13,#u1253-24,#u1253-36,#u1253-37,#u1253-47,#u1253-74,#u1253-75
+#u1253-7,#u1253-9,#u1253-13,#u1253-24,#u1253-36,#u1253-37,#u1253-51,#u1253-82,#u1253-83
 {
 	font-size: 25px;
 	text-align: left;
@@ -619,7 +619,7 @@
 	font-weight: 400;
 }
 
-#u1253-76
+#u1253-84
 {
 	font-size: 20px;
 	text-align: left;
@@ -630,12 +630,12 @@
 
 #slideshowu4628
 {
-	z-index: 143;
+	z-index: 151;
 	width: 0.01px;
 	height: 284px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 876px;
+	margin-top: 946px;
 }
 
 #u4651
@@ -654,12 +654,12 @@
 
 #u4651popup
 {
-	z-index: 144;
+	z-index: 152;
 }
 
 #u4652
 {
-	z-index: 145;
+	z-index: 153;
 	width: 1140px;
 	height: 755px;
 	background-color: transparent;
@@ -687,12 +687,12 @@
 
 #u4631popup
 {
-	z-index: 147;
+	z-index: 155;
 }
 
 #u4638
 {
-	z-index: 148;
+	z-index: 156;
 	width: 177px;
 	height: 251px;
 	border-width: 0px;
@@ -719,8 +719,8 @@
 	min-height: 30px;
 	background-color: transparent;
 	line-height: 20px;
-	color: #FFFFFF;
 	text-align: center;
+	color: #FFFFFF;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	top: 170px;
 	left: -45px;
@@ -728,7 +728,7 @@
 
 #u4650-4popup
 {
-	z-index: 150;
+	z-index: 158;
 }
 
 #u4663-4
@@ -738,8 +738,8 @@
 	min-height: 30px;
 	background-color: transparent;
 	line-height: 20px;
-	color: #FFFFFF;
 	text-align: center;
+	color: #FFFFFF;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	top: 170px;
 	left: 1160px;
@@ -747,7 +747,7 @@
 
 #u4663-4popup
 {
-	z-index: 154;
+	z-index: 162;
 }
 
 #u4642
@@ -780,15 +780,15 @@
 
 #u4643-4
 {
-	z-index: 159;
+	z-index: 167;
 	width: 20px;
 	min-height: 20px;
 	border-width: 0px;
 	border-color: transparent;
 	background-color: transparent;
 	line-height: 20px;
-	color: #FFFFFF;
 	text-align: center;
+	color: #FFFFFF;
 	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 	position: relative;
 	margin-right: -10000px;
