--- a/css/resume.css
+++ b/css/resume.css
@@ -1,7 +1,7 @@
 .version.resume /* version checker */
 {
-	color: #0000E6;
-	background-color: #6A8F40;
+	color: #0000F6;
+	background-color: #D0DF91;
 }
 
 #muse_css_mq
@@ -719,8 +719,8 @@
 	min-height: 30px;
 	background-color: transparent;
 	line-height: 20px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	top: 170px;
 	left: -45px;
@@ -738,8 +738,8 @@
 	min-height: 30px;
 	background-color: transparent;
 	line-height: 20px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	top: 170px;
 	left: 1160px;
@@ -787,8 +787,8 @@
 	border-color: transparent;
 	background-color: transparent;
 	line-height: 20px;
-	text-align: center;
 	color: #FFFFFF;
+	text-align: center;
 	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 	position: relative;
 	margin-right: -10000px;
